Feature/sv 65 list tras (#34)
Add list TRAs page and required user mapping logic
